drone-api/k8s/drone-api.yaml
apiVersion: v1
kind: Namespace 
metadata:
  name: default
  labels: 
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: drone-api
  namespace: default
  labels:
    app: drone-api
    service: drone-api
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: drone-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-api
      version: v1
  template:
    metadata:
      labels:
        app: drone-api
        version: v1
    spec:
      serviceAccountName: drone-api
      containers:
      - image: docker.io/library/drone-api
        imagePullPolicy: Never
        name: drone-api
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "250m"      # Requests 0.25 vCPU
            memory: "256Mi"  # Requests 256 MB RAM
          limits:
            cpu: "1000m"      # Hard cap at 0.5 vCPU
            memory: "512Mi"  # Hard cap at 512 MB RAM
        securityContext:
          runAsUser: 1337
          runAsGroup: 1337
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
