drone-api/k8s/istio-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    hostname: "drone-api.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: drone-api-credential
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: drone-api
spec:
  parentRefs:
  - name: tls-gateway
    namespace: istio-ingress
  hostnames: ["drone-api.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /login
    - path:
        type: PathPrefix
        value: /battlefield
    - path:
        type: PathPrefix
        value: /battlefield/drone/*
    - path:
        type: PathPrefix
        value: /battlefield/provision 
    backendRefs:
    - name: drone-api 
      namespace: default
      port: 8000
